<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.kotlinmvvmtodolist.viewmodel.TaskViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorTask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/back_light"
        tools:context=".ui.task.TaskFragment"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appbar_dimen"
            android:fitsSystemWindows="true"
            android:background="@color/back_light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="@dimen/activity_margin_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <TextView
                    android:id="@+id/mydeal"
                    style="@style/LargeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="82dp"
                    android:text="@string/my_deal" />

                <TextView
                    android:id="@+id/performed"
                    android:text="@string/performed"
                    android:textColor="@color/label_Tertiary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="126dp" />

                <ImageButton
                    android:id="@+id/visibilityBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="125dp"
                    android:background="@drawable/ic_baseline_visibility_24" />


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/anim_toolbar"
                    app:titleTextColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:background="@color/back_secondary"
            app:cardCornerRadius="5dp"
            android:layout_marginBottom="28dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                tools:listitem="@layout/row_layout"

                />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="40dp"
            style="@style/Button"
            android:src="@drawable/ic_baseline_add_24"
            app:backgroundTint="@color/Blue"
            app:fabSize="normal" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:layout_gravity="center"
            tools:visibility="visible" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>