<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:id="@+id/coordinatorTodo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.update.UpdateFragment"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:fitsSystemWindows="true"
            android:background="@color/back_light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/back_light"
                app:expandedTitleMarginStart="@dimen/activity_margin_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">


                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/anim_toolbar"
                    app:titleTextColor="@color/black"
                    android:background="@color/back_light"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <ImageButton
                        android:id="@+id/closeBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_baseline_close_24"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="21dp" />

                    <TextView
                        android:id="@+id/save"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:layout_gravity="center_vertical|end"
                        android:layout_marginRight="16dp"
                        android:textColor="@color/Blue"
                        style="@style/Button" />
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_anchor="@+id/nestedScrollView"
            app:layout_anchorGravity="center"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/textcard"
                    android:background="@color/back_secondary"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:cardCornerRadius="8dp"
                    android:layout_marginHorizontal="16dp">

                    <EditText
                        android:id="@+id/dealtext"
                        style="@style/Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:text="" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="28dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:text="@string/importance"
                        style="@style/Body" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:background="@color/back_light"
                        android:layout_marginTop="4dp"
                        style="@style/SpinnerDropDownItem"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:background="@color/Support_Separator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="26dp"
                    android:layout_marginHorizontal="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/make_up"
                        style="@style/Body" />

                    <Switch
                        android:id="@+id/dateSwitch"
                        android:layout_width="280dp"
                        style="@style/SCBSwitch"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/Blue"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="16dp"
                    android:text="" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="50dp"
                    android:background="@color/Support_Separator" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:layout_marginStart="21dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/deleteImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_delete_24" />

                    <TextView
                        android:id="@+id/deletetext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        style="@style/Body"
                        android:textColor="@color/Label_Disable" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>